package com.constructflow.service.template.export;

public enum ExportFormat {
    PDF, CSV, ZIP
}
