@startuml document_export
title Template Method -- Document Export pipeline

skinparam classAttributeIconSize 0
skinparam backgroundColor white

abstract class AbstractDocumentExporter {
  # documentRepository : DocumentRepository
  # documentStorage : DocumentStorage
  + export(request : ExportRequest) : ExportResult
  # validateAccess(request : ExportRequest)
  # resolveDocument(request : ExportRequest) : Document
  # loadContent(document : Document) : byte[]
  # {abstract} transform(document : Document, raw : byte[]) : byte[]
  # {abstract} contentType() : String
  # {abstract} fileExtension() : String
  # buildFilename(document : Document) : String
  # logExport(request : ExportRequest, filename : String)
}
note right of AbstractDocumentExporter::export
  Final template method -- fixes the
  validate -> resolve -> load -> transform -> log
  skeleton. Subclasses override the abstract steps.
end note

class PdfDocumentExporter {
  # transform(document, raw) : byte[]
  # contentType() : String
  # fileExtension() : String
}

class CsvDocumentExporter {
  # transform(document, raw) : byte[]
  # contentType() : String
  # fileExtension() : String
}

class ZipArchiveExporter {
  # transform(document, raw) : byte[]
  # contentType() : String
  # fileExtension() : String
}

class DocumentExporterResolver {
  - exporters : Map<ExportFormat, AbstractDocumentExporter>
  + forFormat(format : ExportFormat) : AbstractDocumentExporter
}

class DocumentController <<client>> {
  + exportDocument(id, format, requestedBy) : ResponseEntity<byte[]>
}

enum ExportFormat {
  PDF
  CSV
  ZIP
}

class ExportRequest <<record>> {
  documentId : UUID
  format : ExportFormat
  requestedBy : String
}

class ExportResult <<record>> {
  filename : String
  contentType : String
  bytes : byte[]
}

AbstractDocumentExporter <|-- PdfDocumentExporter
AbstractDocumentExporter <|-- CsvDocumentExporter
AbstractDocumentExporter <|-- ZipArchiveExporter

DocumentExporterResolver o--> AbstractDocumentExporter
DocumentController --> DocumentExporterResolver
DocumentController ..> ExportRequest
AbstractDocumentExporter ..> ExportRequest
AbstractDocumentExporter ..> ExportResult
DocumentExporterResolver --> ExportFormat

@enduml
